[gd_scene load_steps=13 format=2]

[ext_resource path="res://recursos/Enemies/wingMan4.png" type="Texture" id=1]
[ext_resource path="res://recursos/Enemies/wingMan2.png" type="Texture" id=2]
[ext_resource path="res://juego/enemigos/Volon.gd" type="Script" id=3]
[ext_resource path="res://recursos/Enemies/wingMan1.png" type="Texture" id=4]
[ext_resource path="res://recursos/Enemies/wingMan5.png" type="Texture" id=5]
[ext_resource path="res://recursos/Enemies/wingMan3.png" type="Texture" id=6]
[ext_resource path="res://recursos/Sfx/Hit_hurt.wav" type="AudioStream" id=7]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 2 ), ExtResource( 6 ), ExtResource( 1 ), ExtResource( 5 ) ],
"loop": true,
"name": "volar",
"speed": 7.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 41.4286, 14.0179 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 44.1072, 12.3214 )

[sub_resource type="Animation" id=5]
resource_name = "morir"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 250 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 180.0 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}
tracks/3/type = "audio"
tracks/3/path = NodePath("Muerte")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 7 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=4]
resource_name = "volar"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 4, 3, 2, 1, 0, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -200 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ColisionImpulso/CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -20 ), Vector2( 0, -235 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ColisionDanio:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 25 ), Vector2( 0, -190 ) ]
}

[node name="Volon" type="Area2D"]
scale = Vector2( 0.7, 0.7 )
collision_layer = 32
collision_mask = 2
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "volar"

[node name="ColisionDanio" type="CollisionShape2D" parent="."]
modulate = Color( 1, 0, 0, 1 )
position = Vector2( 0, 25 )
scale = Vector2( 0.999999, 0.999999 )
shape = SubResource( 2 )

[node name="ColisionImpulso" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="ColisionImpulso"]
modulate = Color( 0.101961, 0.984314, 0.027451, 1 )
position = Vector2( 0, -20 )
scale = Vector2( 0.999999, 0.999999 )
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "volar"
anims/morir = SubResource( 5 )
anims/volar = SubResource( 4 )

[node name="Muerte" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
bus = "SFX"

[connection signal="body_entered" from="." to="." method="_on_Volon_body_entered"]
[connection signal="body_entered" from="ColisionImpulso" to="." method="_on_ColisionImpulso_body_entered"]
